[package]
name = "mtproto"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
byteorder = "1.5.0"
chrono = "0.4.40"
serde_json = "1.0.140"
sha1 = "0.10.6"
sha256 = "1.6.0"
tokio = {version = "1", features = ["full"]}
prime_factorization = "1.0.5"
rsa = "0.9.8"
rand = "0.9.1"
num = "0.4.3"
ige = "0.1.1"
i256 = "0.2.2"
base64 = "0.22.1"
hex = "0.4.3"
bytes = "1.11.1"
